# metadata-schema

./: .gitignore  .pylintrc  CLAUDE.md  ChangeLog  claude.md  eln.yaml  experimental.yaml  pixi.toml  project.yaml  pyproject.toml  readme.md  rever.xsh
.claude/: settings.json
.github/workflows/: doc.yml  lint.yml  release.yml  test.yml  validate-examples.yml
doc/: Makefile  conf.py  generate_schema_docs.py  index.md  schemas.md  usage.md
doc/_templates/docgen/: class.md.jinja2
doc/api/: converters.md  enricher.md
doc/examples/: echemdb_package.md  minimum_echemdb.md
doc/news/: add-atmosphere.rst  add-documentation.rst  add-solute.rst  auto-update-schema.rst  bump-linkml-1_11.rst  camel-case-news.rst  chemical-identfiers.rst  cli-mdstools.rst  del-manufacturer.rst  delimiter.rst  dell-suppl-purity.rst  docstrings-submodules.rst  docsttrings-0.5.1.rst  draft-07.rst  echemdb_package.rst  falttened-list-naming.rst  fix-yaml-date-loading.rst  latex-export.rst  link-ml.rst  original-name.rst  pixi.rst  python-310.rst  ref-resolving-jsonref.rst  referencing.rst  remote-validation.rst  remove-empty-nested.rst  resolve-resource.rst  rever-tag-version-workflow.rst  rever-tag-workflow.rst  rotation.rst  schema-structure.rst  smiles.rst  source-submission.rst  svgdigitizer_package.rst  uncertainty.rst  v0.8.0-test-fixes.rst  versioned-schemas.rst
docs/: .buildinfo  api.html  examples.html  genindex.html  index.html  installation.html  objects.inv  py-modindex.html  schemas.html  search.html  searchindex.js  usage.html
docs/_sources/: api.md.txt  examples.md.txt  index.md.txt  installation.md.txt
docs/_sources/api/: entrypoint.md.txt  metadata.md.txt  validator.md.txt
docs/_sources/examples/: autotag.md.txt  source_data.md.txt  svgdigitizer.md.txt  svgdigitizer_package.md.txt
docs/api/: converters.html  enricher.html  entrypoint.html  metadata.html  validator.html
docs/examples/: autotag.html  echemdb_package.html  minimum_echemdb.html  source_data.html  svgdigitizer.html  svgdigitizer_package.html
docs/schema/autotag/: Atmosphere.html  Autotag.html  Boolean.html  ChemicalIdentifiers.html  Component.html  ComponentSource.html  ComponentType.html  Control.html  ControlledOperation.html  ControlledQuantity.html  Curie.html  (+145 more)
examples/: Author_YYYY_FirstTitleWord_Page_fignr_identifier.yaml  autotag.yaml  curation.yaml  curator.yaml  data_filename.yaml  electrochemical_system.yaml  eln.yaml  experimental.yaml  figure_description.yaml  project.yaml  readme.md  source.yaml  system.yaml
examples/file_schemas/: autotag.yaml  demo_package.json  echemdb_package.json  minimum_echemdb.yaml  minimum_echemebd.yaml  source_data.yaml  svgdigitizer.yaml  svgdigitizer_package.json
examples/objects/: curation.yaml  eln.yaml  experimental.yaml  figure_description.yaml  projects.yaml  source.yaml  system.yaml
linkml/: autotag.yaml  curation.yaml  data_description.yaml  echemdb_package.yaml  eln.yaml  experimental.yaml  figure_description.yaml  minimum_echemdb.yaml  projects.yaml  source.yaml  source_data.yaml  svgdigitizer.yaml  svgdigitizer_package.yaml  system.yaml
linkml/experimental/: instrumentation.yaml  operation.yaml
linkml/general/: chemical_identifiers.yaml  component.yaml  purity.yaml  quantity.yaml  url.yaml
linkml/system/: atmosphere.yaml  electrochemical_cell.yaml  electrode.yaml  electrolyte.yaml
mdstools/: README.md  __init__.py  cli.py  enriched_metadata.py  entrypoint.py  flattened_metadata.py  metadata.py  resolve_schemas.py  schema_enricher.py  tabular_schema.py  update_expected_schemas.py
mdstools/converters/: __init__.py  flatten.py  unflatten.py
mdstools/metadata/: __init__.py  enriched_metadata.py  flattened_metadata.py  local.py  metadata.py
mdstools/models/: README.md  __init__.py  autotag.py  base.py  curation.py  demo_pydantic.py  echemdb_package.py  figure_description.py  general.py  minimum_echemdb.py  source_data.py  svgdigitizer.py  svgdigitizer_package.py
mdstools/schema/: __init__.py  check_naming.py  enricher.py  finalize_migrations.py  generate_from_linkml.py  migrate.py  migrations.py  resolver.py  update_expected_schemas.py  validate_examples.py  validator.py
mdstools/test/: cli.py  test_comprehensive.py  test_finalize_migrations.py  test_generated_artifacts.py  test_migrate.py  test_migrate_package.py  test_migrate_roundtrip.py  test_migrations.py  test_resolved_schemas.py  test_yaml_loading.py
mdstools/tests/: test_comprehensive.py  test_resolved_schemas.py
metadata_schema/: tabular_schema.py
schemas/: README.md  autotag.json  component_schema.json  curation.json  curation_schema.json  echemdb_package.json  electrochemical_system.json  electrochemical_system_schema.json  eln.json  experimental.json  figure_description.json  figure_description_schema.json  minimum_echemdb.json  projects.json  schema.json  source.json  source_data.json  source_schema.json  svgdigitizer.json  svgdigitizer_package.json  system.json
schemas/electrochemical_system/: component.json  electrode.json
schemas/expected/: autotag.json  echemdb_package.json  minimum_echemdb.json  source_data.json  svgdigitizer.json  svgdigitizer_package.json
schemas/experimental/: instrumentation.json
schemas/general/: chemical_identifiers.json  component.json  purity.json  quantity.json  url.json
schemas/schema_pieces/: autotag.yaml  curation.yaml  data_description.json  data_description.yaml  echemdb_package.json  echemdb_package.yaml  eln.json  eln.yaml  experimental.json  experimental.yaml  figure_description.json  figure_description.yaml  minimum_echemdb.json  minimum_echemdb.yaml  projects.yaml  schema.json  schema.yaml  source.json  source.yaml  source_data.json  source_data.yaml  svgdigitizer.json  svgdigitizer.yaml  svgdigitizer_package.json  svgdigitizer_package.yaml  system.json  system.yaml
schemas/system/: atmosphere.json  electrochemical_cell.json  electrode.json  electrolyte.json
tests/: example_metadata.yaml  from_csv_example.csv  simple_test.yaml  test.json
tests/migrations/: echemdb_package_pre_0_8_0.json  minimum_echemdb_pre_0_8_0.yaml
(+1613 files in other folders)
